--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -104,7 +104,7 @@
     color: var(--color-white);
   }
   
-  /* =================== NAVBAR ===================== */
+  /* =================== NAVBAR ============================== */
   nav {
     background: transparent;
     width: 100vw;
@@ -146,7 +146,7 @@
     color: var(--color-bg2);
   }
   
-  /* =================== HEADER ===================== */
+  /* =================== HEADER ================================ */
   header {
     position: relative;
     top: 5rem;
@@ -166,4 +166,75 @@
   .header__left p {
     margin: 1rem 0 2.4rem;
   }
-  
+
+   /* =================== CATEGORIES ================================== */
+   .categories{
+    background-color: var(--color-bg1);
+    height: 29rem;
+  }
+
+  .categories h1{
+        line-height: 1;
+        margin-bottom: 3rem;
+  }
+
+  .categories__container{
+      display: grid;
+      grid-template-columns: 40% 60%;
+  }
+
+  .categories__left {
+      margin-right: 4rem;
+  }
+
+  .categories__left p{
+       margin: 1rem 0 3rem;
+  }
+
+  .categories__right {
+       display: grid;
+       grid-template-columns: repeat(3,1fr);
+       gap: 1.2rem;
+  }
+
+  .category{
+      background-color: var(--color-bg2);
+      padding: 2rem;
+      border-radius: 2rem;
+      transition: var(--transition);
+  }
+
+  .category:hover{
+        box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.3);
+        z-index: 1;
+  }
+
+  .category:nth-child(2) .category__icon{
+        background-color: var(--color-danger);
+  }
+  .category:nth-child(3) .category__icon{
+        background-color: var(--color-success);
+  }
+  .category:nth-child(4) .category__icon{
+        background-color: var(--color-yellow);
+  }
+  .category:nth-child(5) .category__icon{
+        background-color: var(--color-success);
+  }
+
+  .category__icon{
+       background-color: var(--color-primary);
+       padding: 0.7rem;
+       border-radius: 0.9rem;
+       font-size: 2rem;
+  }
+
+  .category h5 {
+       margin: 2rem 0 1rem;
+  }
+
+  .category p {
+      font-size: 0.85rem;
+  }
+
+
