--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -422,11 +422,188 @@
                   font-size: 1.2rem;
                }
 
-  /*======================================== NAVBAR====================================================== */
+  /*======================================== NAVBAR==================================================== */
                   nav button{
                       display: inline-block;
                       background-color: transparent;
                       font-size: 1.8rem;
                       color: var(--color-white);
+                      cursor: pointer;
                   }
+
+                  nav button#close-menu-btn {
+                       display: none;
+                  }
+
+                  .nav__menu{
+                      position: fixed;
+                      top: 5rem;
+                      right: 5%;
+                      height: fit-content;
+                      width: 18rem;
+                      flex-direction: column;
+                      gap: 0;
+                      display: none;
+                      
+                  }
+
+                  .nav__menu li{
+                     width: 100%;
+                     height: 5.8rem;
+                     animation: animateNavItems 400ms linear forwards;
+                     transform-origin: top right;
+                     opacity: 0;
+                  }
+
+                  .nav__menu li:nth-child(2){
+                    animation-delay: 200ms;
+                }
+                .nav__menu li:nth-child(3){
+                    animation-delay: 400ms;
+                }
+                .nav__menu li:nth-child(4){
+                    animation-delay: 600ms;
+                }
+                  
+
+
+                  @keyframes animateNavItems {
+                    0% {
+                        transform: rotatez(-90deg) rotatex(90deg) scale(0.1);
+                    }
+                    100% {
+                        transform: rotatez(0) rotatex(0) scale(1);
+                        opacity: 1;
+                    }
+                  }
+
+                  .nav__menu li a{
+                      background-color: var(--color-primary);
+                      box-shadow: -4rem 6rem 10rem rgba(0, 0, 0, 0.6);
+                      width: 100%;
+                      height: 100%;
+                      display: grid;
+                      place-items: center;
+                  }
+
+                  .nav__menu li a:hover{
+                      background-color: var(--color-bg2);
+                      color: var(--color-white);
+                  }
+                
+    /*======================================== HEADER==================================================== */
+          header{
+              height: 59vh;
+              margin-bottom: 4rem;
           }
+
+          .header__container{
+             padding: 0;
+             margin-bottom: 3rem;
+          }
+
+     /*======================================== Categories==================================================== */
+        .categories{
+            height: auto;
+        }
+
+        .categories__container{
+            grid-template-columns: 1fr;
+            gap: 3rem;
+        }
+
+        .categories__left{
+            margin-right: 0;
+        }
+
+   /*======================================== Popular courses==================================================== */
+      .courses{
+        margin-top: 0;
+      }
+
+      .courses__container{
+         grid-template-columns: 1fr 1fr;
+      }
+
+   /*======================================== FAQS==================================================== */
+        .faqs__container{
+            grid-template-columns: 1fr;
+        }
+
+        .faq{
+            padding: 1.5rem;
+        }
+
+   /*======================================== Footer==================================================== */
+        .footer__container{
+            grid-template-columns: repeat(2,1fr);
+        }
+  }
+
+  /*======================================== MEDIA QUERIES(PHONES)==================================================== */
+    @media screen and (max-width:600px) {
+      .container{
+          width: var(--container-width-sm);
+      }
+      
+       /*======================================== NAVBAR==================================================== */
+            .nav__menu{
+              right: 3%;
+            }
+
+       /*======================================== HEADER==================================================== */
+            header{
+                height: 100vh;
+            }
+
+            .header__container{
+                grid-template-columns: repeat(1,1fr);
+                text-align: center;
+                margin-top: 0;
+            }
+
+            .header__left p{
+                margin-bottom: 1.3rem;
+            }
+
+       /*======================================== CATEGORIES==================================================== */
+           .categories__right {
+               grid-template-columns: repeat(2,1fr);
+               gap: 0.7rem;
+           }
+
+           .category{
+              padding: 1rem;
+              border-radius: 1rem;
+           }
+
+           .category__icon{
+                margin-top: 4px;
+                display: inline-block;
+           }
+
+       /*========================================   Popular courses==================================================== */
+            .courses__container{
+                grid-template-columns: repeat(1,1fr);
+            }
+
+       /*======================================== TESTIMONIALS==================================================== */
+           .testimonial__body{
+               padding: 1.2rem;
+           }
+
+       /*======================================== Footer==================================================== */
+           .footer__container{
+               grid-template-columns: repeat(1,1fr);
+               text-align: center;
+               gap: 2rem;
+           }
+
+           .footer__1 p{
+               margin: 1rem auto;
+           }
+
+           .footer__socials{
+               justify-content: center;
+           }
+    }     
